k8s_files/auth-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  labels:
    app: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: 667183278587.dkr.ecr.us-east-1.amazonaws.com/microservices-project-auth-service:latest
          ports:
            - containerPort: 3001
