k8s_files/frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: 667183278587.dkr.ecr.us-east-1.amazonaws.com/microservices-project-frontend
          ports:
            - containerPort: 80
