k8s_files/product-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
  labels:
    app: product-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
        - name: product-service
          image: 667183278587.dkr.ecr.us-east-1.amazonaws.com/microservices-project-product-service:latest
          ports:
            - containerPort: 3003
