k8s_files/user-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  labels:
    app: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: 667183278587.dkr.ecr.us-east-1.amazonaws.com/microservices-project-user-service:latest
          ports:
            - containerPort: 3002
