k8s_files/auth-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  labels:
    app: auth-service
spec:
  type: LoadBalancer
  selector:
    app: auth-service
  ports:
    - name: http
      port: 3001
      targetPort: 3001
      protocol: TCP
