k8s_files/product-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
  labels:
    app: product-service
spec:
  type: LoadBalancer
  selector:
    app: product-service
  ports:
    - name: http
      port: 3003
      targetPort: 3003
      protocol: TCP
