k8s_files/user-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  labels:
    app: user-service
spec:
  type: LoadBalancer
  selector:
    app: user-service
  ports:
    - name: http
      port: 3002
      targetPort: 3002
      protocol: TCP
