k8s_files/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-gateway
  annotations:
    # change this to your controller’s class if different (nginx, alb, etc.)
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: a4d54a7609dc94621920ed91d811c823-971676861.us-east-1.elb.amazonaws.com
      http:
        paths:
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 3001
          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 3002
          - path: /api/products
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 3003
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
